# sparkle

./: .gitignore  ACTION_PLAN_CIRCULAR_DEPS.md  AUTHORS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CONVOLUTION_MILESTONE.md  CRITICAL_PRODUCTION_BLOCKERS.md  DEVELOPMENT_PATTERNS.md  EPIC_NEO_GEO_OPTIMIZATION.md  GEMM_FIXES.md  GPU_SAFETY.md  IMPLEMENTATION_STATUS.md  LICENSE  MESH_BLUEPRINT.md  MINI_ASSESSMENT.md  MINI_HEXDUMP_ANALYSIS.md  MINI_RING_UPDATE.md  MINI_STATUS.md  MINI_UPDATE.md  MOCK_AUDIT.md  MOCK_TO_REAL_CLEANUP.md  Makefile  Makefile.layer3  Makefile.linux  Makefile.smart  Makefile.test  NEO_GEO_AUDIT.md  PM4_DEBUG_NOTES.md  PM4_FINAL_SUMMARY.md  PM4_STATUS_UPDATE.md  PM4_WIRING_STATUS.md  QA_FINDINGS_SUMMARY.md  QA_ISSUES.md  QA_REMEDIATION_REPORT.md  QA_REPORT_MOCKS.md  QA_REPORT_NEO_GEO.md  (+307 more)
.githooks/: pre-commit  pre-commit-compile
benchmarks/: gpu_baseline_results.md  gpu_execution_summary.md
docs/: ADAPTIVE_KERNEL_STRATEGY.md  ADAPTIVE_PARAMS_STATUS.md  AMDGPU_DIRECT_INTEGRATION.md  AMDGPU_SHADER_EXECUTION.md  AMD_10X_OPTIMIZATION_PLAN.md  AMD_10X_OPTIMIZATION_PLAN_REVISED.md  AMD_PERFORMANCE_BREAKTHROUGH.md  ASYNC_GPU_INTEGRATION.md  AUTOMATIC_DEVICE_SELECTION.md  BENCHMARKING_PLAN.md  CONVERSATION_UPDATE.md  CORRECTNESS_FIRST_UPDATE.md  CRITICAL_UNINTEGRATED_FEATURES.md  CURRENT_STATE.md  DEVICE_JUGGLING_PRODUCTION.md  DEVLOG_2024_12_ADAPTIVE_PARAMS.md  DISCUSSION_MEMORY_CEILING_BREAKTHROUGH.md  DYNAMIC_SHADER_APPROACH.md  DYNAMIC_SHADER_GENERATION_PROPOSAL.md  DYNAMIC_SHADER_SYSTEM_IMPLEMENTED.md  (+62 more)
tools/: CMakeLists.txt  apply_hardening_updates.py  build_and_test_regression.sh  build_log.txt  build_with_stubs.sh  check_bo_list  check_bo_list.c  check_cs_ioctl  check_cs_ioctl.c  check_ctx_ioctl  check_ctx_ioctl.c  check_errno  check_errno.c  check_gem_va_ioctl  check_gem_va_ioctl.c  check_ib_struct  check_ib_struct.c  check_ioctl  check_ioctl.c  check_kernel_headers  check_kernel_headers.c  check_structs  check_structs.c  compile_kernel.sh  extract_elf_section  extract_elf_section.c  extract_shader.sh  find_circular_deps.py  minimal_store.bc  minimal_store.cl  minimal_store.s  parse_kernel_metadata.py  rdtsc_wrapper.c  refactor_sparkle_to_sporkle.sh  safe_sporkle_refactor.sh  setup_git_hooks.sh  simple_performance_test.f90  simple_store.s  test_bo_list_real  test_bo_list_real.c  (+44 more)
tools/tickets/: TICKET-003-qa-security-fixes.md
(+571 files in other folders)
